JDK17 to JDK11 downgrade